--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,23 +2,27 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["ES2023"],
+    "lib": ["ES6"],
     "module": "ESNext",
-    "skipLibCheck": true,
+    "noUnusedParameters": false, // Allow unused function parameters
+    "noImplicitAny": false, // Allow implicit `any` types
+    "skipLibCheck": true ,// Skip type-checking of library files
+
 
     /* Bundler mode */
-    "moduleResolution": "Bundler",
+    // "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": false,
+    // "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedSideEffectImports": false
   },
   "include": ["vite.config.ts"]
 }
