--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,27 +2,24 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["ES6"],
+    "lib": ["ES2022"],
     "module": "ESNext",
-    "noUnusedParameters": false, // Allow unused function parameters
-    "noImplicitAny": false, // Allow implicit `any` types
-    "skipLibCheck": true ,// Skip type-checking of library files
-
+    "skipLibCheck": true,
 
     /* Bundler mode */
-    // "moduleResolution": "Bundler",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
 
     /* Linting */
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noUnusedLocals": false,
-    // "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": false,
-    "noUncheckedSideEffectImports": false
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
 }
