--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,7 @@
         "label": "off"
       }
     ],
-    "typescript-config/strict": "off"
+    "typescript-config/strict": "off",
+    "no-inline-styles": "off"
   }
 }
