--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router": "6",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
