--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-router": "6",
     "react-router-dom": "6",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "sonner": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
