--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/axios": "^0.14.4",
     "axios": "^1.7.7",
@@ -20,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router": "6",
     "react-router-dom": "6",
