--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/axios": "^0.14.4",
+    "@types/react-datepicker": "^7.0.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.456.0",
